@@ -1,9 +1,12 @@
-MD5 51ded889591e27f2b198d396e25566e4 ChangeLog 1637
+MD5 bcb1768366d608f8511bbf0c8a44fa59 phpBB-2.0.6-r1.ebuild 1340
+MD5 d2a108bbad5d15c5556ed0f8a3bdc219 ChangeLog 1889
 MD5 c339473e0ff43da76eb2f2607c441921 metadata.xml 280
 MD5 0329a803da692e6e047fdd0f9b1d21b5 phpBB-2.0.6-r2.ebuild 1261
-MD5 bcb1768366d608f8511bbf0c8a44fa59 phpBB-2.0.6-r1.ebuild 1340
 MD5 6fc277910a0ad79e0af06ea0851866be phpBB-2.0.8a.ebuild 1258
+MD5 a7fc666d5ebe21e7dcf0576f826dd465 phpBB-2.0.8a-r1.ebuild 908
 MD5 2bcc15b387e45c0342ace8fe007ada43 files/digest-phpBB-2.0.6-r1 64
-MD5 81edef11555fd2672d5ccc894ce8b711 files/digest-phpBB-2.0.6-r2 64
 MD5 baf12ebb39a1b14b5b0bf0fa9320eba8 files/phpBB-2.0.6-security.patch 248
+MD5 81edef11555fd2672d5ccc894ce8b711 files/digest-phpBB-2.0.6-r2 64
 MD5 a5490792af02884bb7bfd22efa001697 files/digest-phpBB-2.0.8a 65
+MD5 a5490792af02884bb7bfd22efa001697 files/digest-phpBB-2.0.8a-r1 65
+MD5 a2ffb1296c4ce58eee7df10b2ccaaebc files/2.0.8-postinstall-en.txt 116
