@@ -1,0 +1,33 @@
+# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-www/phpBB/phpBB-2.0.8a-r1.ebuild,v 1.1 2004/05/14 22:08:29 stuart Exp $
+
+inherit webapp
+
+DESCRIPTION="phpBB is an open-source bulletin board package."
+HOMEPAGE="http://www.phpbb.com/"
+SRC_URI="mirror://sourceforge/phpbb/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+KEYWORDS="~x86 ~ppc ~sparc ~alpha ~amd64"
+RESTRICT="nomirror"
+
+RDEPEND="virtual/php"
+
+S=${WORKDIR}/${PN}2
+
+src_install() {
+	webapp_src_preinst
+
+	dodoc ${S}/docs/*
+	rm -rf ${S}/docs/
+
+	cp -a * "${D}/${MY_HTDOCSDIR}"
+
+	echo "<?php trigger_error('Please use install/install.php to configure phpBB for your system!', E_USER_ERROR); ?>" > "${D}/${MY_HTDOCSDIR}/config.php"
+	webapp_serverowned "${MY_HTDOCSDIR}/config.php"
+
+	webapp_postinst_txt en ${FILESDIR}/2.0.8-postinstall-en.txt
+
+	webapp_src_install
+}
